@@ -2,6 +2,7 @@
 	* New features:
 		- Add version command(2015-03-10)
 		- Add rkeys command(2015-02-15)
+		- Update options.max_open_files default value to 500(2015-03-15)
 	* Bug fixes:
 		- Fix ttl bug(https://github.com/ideawu/ssdb/issues/628)(2015-03-14)
 * 1.8.0
